--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -19,7 +19,8 @@
     <div id="principal">
         <div id="menu">
             <div id="titulo">
-                <h1 id="t1"><a href="#" id="link" target="_self" rel="next">Announcement</a>   How we're responding to COVID-19</h1>
+                <button id="a0">Announcement</button>
+                <p id="a11">How we're responding to COVID-19</p>
             </div>
             <div id="direcionar">
                 <img id="logo1" src="Projeto/logo.svg" alt="Logo do site">
