--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -23,14 +23,14 @@
                 <p id="a11">How we're responding to COVID-19</p>
             </div>
             <div id="direcionar">
-                <img id="logo1" src="Projeto/logo.svg" alt="Logo do site">
+                <img src="Projeto/logo.svg" alt="Logo do site">
                 <ul id="u">
                     <li class="li"><a href="#" target="_self" rel="next" class="link">Home</a></li>
                     <li class="li"><a href="#" target="_self" rel="next" class="link">About</a></li>
                     <li class="li"><a href="#" target="_self" rel="next" class="link">Shop</a></li>
                     <li class="li"><a href="#" target="_self" rel="next" class="link">Donate</a></li>
                     <li class="li"><a href="#" target="_self" rel="next" class="link">Contact</a></li>
-                    <li id="car"><a id="carrinho" href="#" target="_self" rel="next"><img src="Projeto/carrinho.svg" alt="Carrinho" id="c"></a></li>
+                    <li id="car"><button id="carrinho"><img src="Projeto/carrinho.svg" alt="Carrinho" id="c"></button></li>
                 </ul>
             </div>
         </div>
