--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -20,7 +20,7 @@
         <div id="menu">
             <div id="titulo">
                 <button id="a0">Announcement</button>
-                <p id="a11">How we're responding to COVID-19</p>
+                <p>How we're responding to COVID-19</p>
             </div>
             <div id="direcionar">
                 <img src="Projeto/logo.svg" alt="Logo do site">
