--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="Estilo/produtos.css">
     <link rel="stylesheet" href="Estilo/msg.css">
     <link rel="stylesheet" href="Estilo/base.css">
+    <link rel="stylesheet" href="Estilo/config.css">
     <title>COVID-19</title>
 </head>
 <body>
@@ -36,9 +37,11 @@
         </div>
         <div id="img1">
             <div id="caixa1">
-                <h1 id="a1">Serving you since 1989.</h1>
-                <p id="a2">Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City.</p>
-                <a id="a3" href="#" target="_self" rel="next">Shop Merch</a>
+                <div id="matrizA">
+                    <h1>Serving you since 1989.</h1>
+                    <p>Acme Outdoors is an outdoor and adventure shop located in the Boathouse District in Oklahoma City.</p>
+                    <button id="ma11">Shop Merch</button>
+                </div>
             </div>
         </div>
         <div id="cards">
