--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -46,9 +46,13 @@
         </div>
         <div id="cards">
             <div id="b1">
-                <h2 id="b11">WAYS TO SUPPORT</h2>
-                <h1 id="b12">Support Acme Outdoors.</h1>
-                <p id="b13">COVID-19 has forced us to close our retail space, but we need support from patrons like yourself now more than ever. Below, we've listed the best ways to help us through this season.</p>
+                <div id="b11">
+                    <p>WAYS TO SUPPORT</p>
+                    <h2>Support Acme Outdoors.</h2>
+                </div>
+                <div id="b12">
+                    <p>COVID-19 has forced us to close our retail space, but we need support from patrons like yourself now more than ever. Below, we've listed the best ways to help us through this season.</p>
+                </div>
             </div>
             <div id="b2">
                 <div class="caixas">
