--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -88,8 +88,10 @@
         </div>
         <div id="produtos">
             <div id="d1">
-                <h2 id="d11">SHOP PRODUCTS</h2>
-                <h1 id="d12">Open 24/7/365.</h1>
+                <div id="d11">
+                    <p>SHOP PRODUCTS</p>
+                    <h2>Open 24/7/365.</h2>
+                </div>
             </div>
             <div id="d2">
                 <div class="matrizd">
