--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -81,9 +81,11 @@
         </div>
         <div id="img2">
             <div id="c1">
-                <h1 id="c11">How we're keeping you safe during COVID-19</h1>
-                <p id="c12">As an outdoor shop, we've taken precautionary measures to ensure the safety of all our customers and team members.</p>
-                <a id="c13" href="#" target="_self" rel="next">Read Our Statement</a>
+                <div id="c11">
+                    <h1>How we're keeping you safe during COVID-19</h1>
+                    <p>As an outdoor shop, we've taken precautionary measures to ensure the safety of all our customers and team members.</p>
+                    <button id="c12">Read Our Statement</button>
+                </div>
             </div>
         </div>
         <div id="produtos">
