--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -99,7 +99,7 @@
                 <div class="matrizd">
                     <div class="molde" id="d21"></div>
                     <div class="d20">
-                        <h2 class="dtm">White Tent</h2>
+                        <h4>White Tent</h4>
                         <p>$ 200.00 USD</p>
                         <button>Details</button>
                     </div>
@@ -107,7 +107,7 @@
                 <div class="matrizd">
                     <div class="molde" id="d22"></div>
                     <div class="d20">
-                        <h2 class="dtm">Tin Coffee Tumbler</h2>
+                        <h4>Tin Coffee Tumbler</h4>
                         <p>$ 35.00 USD</p>
                         <button>Details</button>
                     </div>
@@ -120,7 +120,7 @@
                         <button id="d24">SALE</button>
                     </div>
                     <div class="d20">
-                        <h2 class="dtm">Blue Canvas Pack</h2>
+                        <h4>Blue Canvas Pack</h4>
                         <p>$ 95.00 USD <del>$ 145.00 USD</del></p>
                         <button>Details</button>
                     </div>
