--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -24,14 +24,14 @@
                 <p>How we're responding to COVID-19</p>
             </div>
             <div id="direcionar">
-                <img src="Projeto/logo.svg" alt="Logo do site">
+                <img class="logo" src="Projeto/logo.svg" alt="Logo do site">
                 <ul id="u">
                     <li class="li"><a href="#" target="_self" rel="next" class="link">Home</a></li>
                     <li class="li"><a href="#" target="_self" rel="next" class="link">About</a></li>
                     <li class="li"><a href="#" target="_self" rel="next" class="link">Shop</a></li>
                     <li class="li"><a href="#" target="_self" rel="next" class="link">Donate</a></li>
                     <li class="li"><a href="#" target="_self" rel="next" class="link">Contact</a></li>
-                    <li id="car"><button id="carrinho"><img src="Projeto/carrinho.svg" alt="Carrinho" id="c"></button></li>
+                    <li class="li"><button id="carrinho"><img src="Projeto/carrinho.svg" alt="Carrinho" id="c"></button></li>
                 </ul>
             </div>
         </div>
@@ -142,11 +142,11 @@
             </div>
         </div>
         <div id="base">
-            <img src="Projeto/logo_baixo.svg" alt="logo_baixo">
+            <img class="logo" src="Projeto/logo_baixo.svg" alt="logo_baixo">
             <ul>
-                <li class="fl"><a href="#" target="_self" rel="external"><img src="Projeto/twitter30.png" alt="twitter"></a></li>
-                <li class="fl"><a href="#" target="_self" rel="external"><img src="Projeto/facebook30.png" alt="facebook"></a></li>
-                <li class="fl"><a href="#" target="_self" rel="external"><img src="Projeto/instagram30.png" alt="instagram"></a></li>
+                <li class="fl"><a href="#" target="_self" rel="external"><img src="Projeto/twitter30.png" class="icon" alt="twitter"></a></li>
+                <li class="fl"><a href="#" target="_self" rel="external"><img src="Projeto/facebook30.png" class="icon" alt="facebook"></a></li>
+                <li class="fl"><a href="#" target="_self" rel="external"><img src="Projeto/instagram30.png" class="icon" alt="instagram"></a></li>
             </ul>
         </div>
     </div>
