--- a/projetosite/index.html
+++ b/projetosite/index.html
@@ -55,28 +55,32 @@
                 </div>
             </div>
             <div id="b2">
-                <div class="caixas">
-                    <h3 class="b21">01</h3>
-                    <h3 class="b22">SHOP</h3>
-                    <h3 class="b22">PRODUCTS</h3>
-                    <img class="b23" src="Projeto/circle.png" alt="circulo">
+                <div class="guia">
+                    <div class="caixas">
+                        <h3 class="b21">01</h3>
+                        <h3 class="b22">SHOP</h3>
+                        <h3 class="b22">PRODUCTS</h3>
+                        <img class="b23" src="Projeto/circle.png" alt="circulo">
+                    </div>
+                    <p>Our full product line is still available online here on our site! Getting outside and hiking is still something you can do. Get your gear.</p>
                 </div>
-                <div class="caixas">
-                    <h3 class="b21">02</h3>
-                    <h3 class="b22" id="b22">DONATE</h3>
-                    <img class="b23" id="bt" src="Projeto/triangle.png" alt="triangulo">
+                <div class="guia">
+                    <div class="caixas">
+                        <h3 class="b21">02</h3>
+                        <h3 class="b22" id="b22">DONATE</h3>
+                        <img class="b23" id="bt" src="Projeto/triangle.png" alt="triangulo">
+                    </div>
+                    <p>Since we've changed the way we operate to online only, and to ensure your safety, not all our staff is working. Donate to keep them.</p>
                 </div>
-                <div class="caixas">
-                    <h3 class="b21">03</h3>
-                    <h3 class="b22">BUY</h3>
-                    <h3 class="b22">GIFT CARDS</h3>
-                    <img class="b23" src="Projeto/rectangle.png" alt="retangulo">
+                <div class="guia">
+                    <div class="caixas">
+                        <h3 class="b21">03</h3>
+                        <h3 class="b22">BUY</h3>
+                        <h3 class="b22">GIFT CARDS</h3>
+                        <img class="b23" src="Projeto/rectangle.png" alt="retangulo">
+                    </div>
+                    <p>Have all the outdoor gear you need for now? Buy a gift card and use it later or share it with friends and family.</p>
                 </div>
-            </div>
-            <div id="b3">
-                <p class="b31">Our full product line is still available online here on our site! Getting outside and hiking is still something you can do. Get your gear.</p>
-                <p class="b31">Since we've changed the way we operate to online only, and to ensure your safety, not all our staff is working. Donate to keep them.</p>
-                <p class="b31">Have all the outdoor gear you need for now? Buy a gift card and use it later or share it with friends and family.</p>
             </div>
         </div>
         <div id="img2">
